--- a/index2.html
+++ b/index2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Premium Dark Header</title>
+  <title>Premium Dark Headerr</title>
 
   <!-- Bootstrap 5.3.7 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
