--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="walkThroughSub">
                 <li><a class="dropdown-item" href="#">Model 6 zona</a></li>
+                <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="#">Model 18 zona</a></li>
+                <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="#">Outdoor IP65</a></li>
               </ul>
               </li>
@@ -194,7 +196,7 @@
           <div class="pc-meta d-flex flex-column justify-content-end">
             <div>
               <h5 class="pc-name mb-1 text-white">Video nadzor</h5>
-              <p class="mb-3 text-white-75 small">A Product Designer focused on intuitive user experiences.</p>
+              <p class="mb-3 text-white-75 small">Osigurajte vaš dom ili poslovni prostor.</p>
               <div class="d-flex align-items-center justify-content-between">
                 <div class="d-flex gap-3 small text-white-75">
                   <button class="btn btn-danger btn-sm rounded-pill fw-semibold px-3">
@@ -216,7 +218,7 @@
           <div class="pc-meta d-flex flex-column justify-content-end">
             <div>
               <h5 class="pc-name mb-1 text-white">Iznajmljivanje metal detektora</h5>
-              <p class="mb-3 text-white-75 small">Iznajmljivanje metal detektora</p>
+              <p class="mb-3 text-white-75 small">Kontrola pristupa uz pouzdane sigurnosne sisteme.</p>
               <div class="d-flex align-items-center justify-content-between">
                 <div class="d-flex gap-3 small text-white-75">
                   <button class="btn btn-danger btn-sm rounded-pill fw-semibold px-3">
@@ -237,7 +239,7 @@
           <div class="pc-meta d-flex flex-column justify-content-end">
             <div>
               <h5 class="pc-name mb-1 text-white">Elektro instalacije</h5>
-              <p class="mb-3 text-white-75 small">UX Researcher turning insights into delightful products.</p>
+              <p class="mb-3 text-white-75 small">Profesionalna i sigurna ugradnja svih elektro sistema.</p>
               <div class="d-flex align-items-center justify-content-between">
                 <div class="d-flex gap-3 small text-white-75">
                   <button class="btn btn-danger btn-sm rounded-pill fw-semibold px-3">
@@ -371,5 +373,6 @@
     });
   })();
 </script>
+
 </body>
 </html>
