--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Premium Dark Headerr</title>
+  <title>Profesionalna zaštita, maksimalna sigurnost | Maximus security </title>
 
   <!-- Bootstrap 5.3.7 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -47,10 +47,10 @@
       <!-- Links (right) -->
       <div class="collapse navbar-collapse justify-content-lg-end" id="mainNav">
         <ul class="navbar-nav align-items-lg-center">
-          <!-- Tehnička zaštita -->
+          <!-- Video nadzor -->
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="tzDrop" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Tehnička zaštita
+              Video nadzor
             </a>
             <ul class="dropdown-menu dropdown-menu-start" aria-labelledby="tzDrop">
               <li><a class="dropdown-item" href="#">Video nadzor</a></li>
@@ -61,57 +61,53 @@
             </ul>
           </li>
 
-            <!-- Vrata metal detektori -->
+          <!-- Alarmni sistemi -->
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="tzDrop" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Alarmni sistemi
+            </a>
+            <ul class="dropdown-menu dropdown-menu-start" aria-labelledby="tzDrop">
+              <li><a class="dropdown-item" href="#">Alarmni sistemi</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Alarmni sistemi</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Kontrola pristupa</a></li>
+            </ul>
+          </li>
+
+
+            <!-- Kontrola prolaza -->
             <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="vrataDrop" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
-              Vrata metal detektori
+              Kontrola prolaza
             </a>
+            
             <ul class="dropdown-menu dropdown-menu-start" aria-labelledby="vrataDrop">
-              <!-- Walk-through submenu -->
-              <li class="dropend">
-              <a class="dropdown-item dropdown-toggle" href="#" id="walkThroughSub" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
-                Walk-through
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="walkThroughSub">
-                <li><a class="dropdown-item" href="#">Model 6 zona</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Model 18 zona</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Outdoor IP65</a></li>
-              </ul>
-              </li>
-
-              <li><hr class="dropdown-divider"></li>
-
-              <!-- Hand-held submenu -->
+              <!-- Metal detektorska vrata -->
               <li class="dropend">
               <a class="dropdown-item dropdown-toggle" href="#" id="handHeldSub" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
-                Hand-held
+                Metal detektorska vrata
               </a>
               <ul class="dropdown-menu" aria-labelledby="handHeldSub">
-                <li><a class="dropdown-item" href="#">Standard</a></li>
+                <li><a class="dropdown-item" href="#">Modeli MD vrata</a></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Visoka osetljivost</a></li>
+                <li><a class="dropdown-item" href="#">Rentiranje MD vrata </a></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">USB punjenje</a></li>
+                <li><a class="dropdown-item" href="#">Modularna vrata</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="#">Kombinovana vrata / Detekcija temperature </a></li>
               </ul>
               </li>
 
               <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Rendgen skeneri</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">X-ray skeneri</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Ručni detektori</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Servis KD opreme</a></li>
 
-              <!-- Industrijska rešenja submenu -->
-              <li class="dropend">
-              <a class="dropdown-item dropdown-toggle" href="#" id="indSub" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
-                Industrijska rešenja
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="indSub">
-                <li><a class="dropdown-item" href="#">Rudnici</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Fabrike hrane</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Farmaceutska</a></li>
-              </ul>
-              </li>
             </ul>
             </li>
 
@@ -121,39 +117,69 @@
               Elektro instalacije
             </a>
             <ul class="dropdown-menu dropdown-menu-start" aria-labelledby="elektroDrop">
-              <li><a class="dropdown-item" href="#">Projektovanje</a></li>
+              <li><a class="dropdown-item" href="#">Industrijske</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Montaža</a></li>
+              <li><a class="dropdown-item" href="#">Stambene </a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Održavanje</a></li>
+              <li><a class="dropdown-item" href="#">Gromobrani</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Razvodni ormani</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Rasveta</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Antipanic</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Galanterija</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Podno grejanje</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Osigurači</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Uzemljenje</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Elektro energetika</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Priprema gradilišta</a></li>
             </ul>
           </li>
 
           <!-- X-ray skeneri -->
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="xrayDrop" data-bs-toggle="dropdown" aria-expanded="false">
-              X-ray skeneri
+              Protiv pozarni sistemi
             </a>
             <ul class="dropdown-menu dropdown-menu-start" aria-labelledby="xrayDrop">
-              <li><a class="dropdown-item" href="#">Poštanski &amp; paket</a></li>
+              <li><a class="dropdown-item" href="#">Adresibilni dojavni sistemi</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Prtljag &amp; teret</a></li>
+              <li><a class="dropdown-item" href="#">Konvencionalni dojavni sistemi</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Specijalne namene</a></li>
+              <li><a class="dropdown-item" href="#">Centrale</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Detektori</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">PP Aparati</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">CO Detekcija</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">PP Kablovi</a></li>
             </ul>
           </li>
 
           <!-- Tehnička rešenja -->
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="resenjaDrop" data-bs-toggle="dropdown" aria-expanded="false">
-              Tehnička rešenja
+              Sistemska rešenja
             </a>
             <ul class="dropdown-menu dropdown-menu-start" aria-labelledby="resenjaDrop">
-              <li><a class="dropdown-item" href="#">Po meri</a></li>
+              <li><a class="dropdown-item" href="#">Termalne kamere</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Integracije</a></li>
+              <li><a class="dropdown-item" href="#">Računarske mreže</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Konsalting</a></li>
+              <li><a class="dropdown-item" href="#">Interfonski sistemi</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Rampe i motori za kapije</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Projektovanje i izvođenje</a></li>
             </ul>
           </li>
 
