--- a/index.html
+++ b/index.html
@@ -48,33 +48,14 @@
       <div class="collapse navbar-collapse justify-content-lg-end" id="mainNav">
         <ul class="navbar-nav align-items-lg-center">
           <!-- Video nadzor -->
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="tzDrop" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Video nadzor
-            </a>
-            <ul class="dropdown-menu dropdown-menu-start" aria-labelledby="tzDrop">
-              <li><a class="dropdown-item" href="#">Video nadzor</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Alarmni sistemi</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Kontrola pristupa</a></li>
-            </ul>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Video nadzor</a>
           </li>
 
           <!-- Alarmni sistemi -->
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="tzDrop" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Alarmni sistemi
-            </a>
-            <ul class="dropdown-menu dropdown-menu-start" aria-labelledby="tzDrop">
-              <li><a class="dropdown-item" href="#">Alarmni sistemi</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Alarmni sistemi</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Kontrola pristupa</a></li>
-            </ul>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Alarmni sistemi</a>
           </li>
-
 
             <!-- Kontrola prolaza -->
             <li class="nav-item dropdown">
