--- a/index.html
+++ b/index.html
@@ -440,7 +440,17 @@
                 <li><a href="#">Server &amp; mreže</a></li>
               </ul>
             </div>
-            <div class="col-12 col-sm-6">
+            <div class="col-12 col-sm-4">
+              <h6 class="text-white mb-3">Tehnička zaštita</h6>
+              <ul class="list-unstyled footer-links">
+                <li><a href="#">Video nadzor</a></li>
+                <li><a href="#">Alarmni sistemi</a></li>
+                <li><a href="#">Kontrola pristupa</a></li>
+                <li><a href="#">Interfoni</a></li>
+                <li><a href="#">Server &amp; mreže</a></li>
+              </ul>
+            </div>
+            <div class="col-12 col-sm-4">
               <h6 class="text-white mb-3">Kompanija</h6>
               <ul class="list-unstyled footer-links">
                 <li><a href="#"> Cara Dušana 150, Nova pazova</a></li>
