--- a/index.html
+++ b/index.html
@@ -171,18 +171,15 @@
 <main>
 <!-- Hero Section -->
 <section class="hero w-100 position-relative overflow-hidden text-white">
-  <div class="hero-blob"></div>
-
   <div class="container">
     <div class="row align-items-center hero-inner px-3 mx-auto">
-      
       <!-- LEFT: BIG HEADLINE -->
       <div class="col-12 col-lg-7">
-        <div class="mb-3">
+        <!-- <div class="mb-3">
           <span class="badge rounded-pill border border-white text-light fw-semibold px-3 py-1" style="background-color: rgba(255, 255, 255, 0.5);">
             Nudimo
           </span>
-        </div>
+        </div> -->
         <h1 class="hero-title fw-bold mb-2 lh-1">
           Rešite zakonsku obavezu <span class="accent">gromobrana.</span>
         </h1>
