--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
       <!-- RIGHT: BADGE + COPY + CTAs -->
       <div class="col-12 col-lg-5 mt-3 mt-lg-0">
         <p class="lead text-secondary mb-3 white">
-          Mi preuzimamo ceo proces umesto vas - <strong class="underline">od izrade potrebne dokumentacije do kompletne montaže</strong>. Sve rešavate na jednom mestu!
+          Mi preuzimamo ceo proces umesto vas - <strong class="underline">od izrade potrebne dokumentacije do kompletne montaže</strong>. Sve rešavate na jednom mestu!!
         </p>
         <!-- stack on xs, row from sm and up -->
         <div class="d-flex flex-column flex-sm-row gap-2">
