--- a/index.html
+++ b/index.html
@@ -355,6 +355,9 @@
 <section>
   <div class="container">
     <div class="col-md-12 section-breathe">
+      <div class="d-flex justify-content-center mb-3">
+        <span class="badge rounded-pill border border-2 border-white text-white bg-transparent px-4 py-2 fs-5 fw-semibold">Alarmni sistemi</span>
+      </div><br>
       <h2 class="text-center">Najpouzdaniji sistem zaštite od provalnika</h2>
       <p class="lead text-secondary text-center mb-3 white">Naši alarmni sistemi obezbeđuju najviši nivo sigurnosti za vaš dom ili poslovni prostor.</p>
 
