--- a/index.html
+++ b/index.html
@@ -352,7 +352,8 @@
 </section>
 </main>
 
-<section>
+<!-- Alarmni sistemi sekcija -->
+<section class="alarmni-bg">
   <div class="container">
     <div class="col-md-12 section-breathe">
       <div class="d-flex justify-content-center mb-3">
@@ -403,11 +404,12 @@
           >
         </div>
       </div>
-
     </div>
   </div>
-
 </section>
+<!-- Alarmni sistemi sekcija -->
+
+
 <div class="clearfix"></div>
 <footer class="footer-wrap mt-5 footer-position">
   <div class="container">
