--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
           <!-- X-ray skeneri -->
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="xrayDrop" data-bs-toggle="dropdown" aria-expanded="false">
-              Protiv pozarni sistemi
+              Protiv požarni sistemi
             </a>
             <ul class="dropdown-menu dropdown-menu-start" aria-labelledby="xrayDrop">
               <li><a class="dropdown-item" href="#">Adresibilni dojavni sistemi</a></li>
