--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
           </span>
         </div> -->
         <h1 class="hero-title fw-bold mb-2 lh-1">
-          Rešite zakonsku obavezu <span class="accent">gromobrana..</span>
+          Rešite zakonsku obavezu <span class="accent">gromobrana.</span>
         </h1>
       </div>
 
